MiniKube/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: instantaneousgram
spec:
  containers:
  - name: debug-container
    image: nicolaka/netshoot
    command: ["/bin/sleep", "infinity"]
