MiniKube/instantaneousgram-apigateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-apigateway
  namespace: instantaneousgram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instantaneousgram-apigateway
  template:
    metadata:
      labels:
        app: instantaneousgram-apigateway
    spec:
      serviceAccountName: ocelot-gateway-sa
      containers:
      - name: instantaneousgram-apigateway
        image: slothh/instantaneousgram-apigatewayservices:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-apigateway-service
  namespace: instantaneousgram
spec:
  type: ClusterIP
  selector:
    app: instantaneousgram-apigateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
