MiniKube/instantaneousgram-authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-authentication
  namespace: instantaneousgram
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instantaneousgram-authentication
  template:
    metadata:
      labels:
        app: instantaneousgram-authentication
    spec:
      containers:
      - name: instantaneousgram-authentication
        image: slothh/instantaneousgram-authenticationservices:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
         
---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-authentication-clusterip
  namespace: instantaneousgram
spec:
  type: ClusterIP
  selector:
    app: instantaneousgram-authentication
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
