MiniKube/instantaneousgram-contentmanagement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-contentmanagement
  namespace: instantaneousgram
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instantaneousgram-contentmanagement
  template:
    metadata:
      labels:
        app: instantaneousgram-contentmanagement
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: instantaneousgram-contentmanagement
        image: slothh/instantaneousgram-contentmanagement:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-contentmanagement-clusterip
  namespace: instantaneousgram
spec:
  type: ClusterIP
  selector:
    app: instantaneousgram-contentmanagement
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
