MiniKube/instantaneousgram-imageandvideoprocessing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-imageandvideoprocessing
  namespace: instantaneousgram
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instantaneousgram-imageandvideoprocessing
  template:
    metadata:
      labels:
        app: instantaneousgram-imageandvideoprocessing
    spec:
      containers:
      - name: instantaneousgram-imageandvideoprocessing
        image: slothh/instantaneousgram-imageandvideoprocessing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-imageandvideoprocessing-clusterip
  namespace: instantaneousgram
spec:
  type: ClusterIP
  selector:
    app: instantaneousgram-imageandvideoprocessing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
