MiniKube/instantaneousgram-likeandcomment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-likeandcomment
  namespace: instantaneousgram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instantaneousgram-likeandcomment
  template:
    metadata:
      labels:
        app: instantaneousgram-likeandcomment
    spec:
      containers:
      - name: instantaneousgram-likeandcomment
        image: slothh/instantaneousgram-likeandcomment:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-likeandcomment-clusterip
  namespace: instantaneousgram
spec:
  type: ClusterIP
  selector:
    app: instantaneousgram-likeandcomment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
