MiniKube/instantaneousgram-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instantaneousgram-userprofile
  namespace: instantaneousgram
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instantaneousgram-userprofile
  template:
    metadata:
      labels:
        app: instantaneousgram-userprofile
    spec:
      dnsConfig:
        searches:
          - instantaneousgram.svc.cluster.local
          - svc.cluster.local
          - cluster.local
      containers:
      - name: instantaneousgram-userprofile
        image: slothh/instantaneousgram-userprofileservices:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: instantaneousgram-userprofile-clusterip
  namespace: instantaneousgram
spec:
  type: ClusterIP
  selector:
    app: instantaneousgram-userprofile
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
