MiniKube/instantaneousgram-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instantaneousgram-ingress
  namespace: instantaneousgram
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - instantaneousgram.ddns.net
      secretName: keyvault-instantaneousgram-ingress
  rules:
    - host: instantaneousgram.ddns.net
      http:
        paths:
          - path: /userprofile(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: instantaneousgram-userprofile-clusterip
                port:
                  number: 80
          - path: /contentmanagement(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: instantaneousgram-contentmanagement-clusterip
                port:
                  number: 80
          - path: /likesandcomments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: instantaneousgram-likeandcomment-clusterip
                port:
                  number: 80
          - path: /imageandvideoprocessing(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: instantaneousgram-imageandvideoprocessing-clusterip
                port:
                  number: 80
